fix: update styles for ForgotPassword and Login components for improved consistency and alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -225,15 +225,15 @@
 }
 
 .reset-password-input {
-  @apply w-full pl-12 pr-4 py-3.5 bg-gray-50 border-2 border-gray-200 rounded-xl text-gray-800 placeholder-gray-400 focus:outline-none focus:border-gray-500 focus:bg-white transition-all duration-300 hover:border-gray-300;
+  @apply w-full pl-12 pr-4 py-3.5 bg-gray-50 border border-gray-200 rounded-md text-gray-800 placeholder-gray-400 focus:outline-none focus:border-gray-500 focus:bg-white transition-all duration-300 hover:border-gray-300;
 }
 
 .reset-password-otp {
-  @apply w-12 h-14 bg-gray-50 border-2 border-gray-200 rounded-xl text-center text-xl font-bold text-gray-800 focus:outline-none focus:border-gray-500 focus:bg-white transition-all duration-300 hover:border-gray-300;
+  @apply w-12 h-14 bg-gray-50 border border-gray-200 rounded-md text-center text-xl font-bold text-gray-800 focus:outline-none focus:border-gray-500 focus:bg-white transition-all duration-300 hover:border-gray-300;
 }
 
 .reset-password-btn {
-  @apply w-full bg-black text-white py-3.5 rounded-xl font-semibold   disabled:cursor-not-allowed hover:bg-black/90 cursor-pointer  flex items-center justify-center gap-2;
+  @apply w-full bg-black text-white py-3.5 rounded-md font-semibold   disabled:cursor-not-allowed hover:bg-black/90 cursor-pointer  flex items-center justify-center gap-2;
 }
 
 .text-outline {
